# cc-workflow-ecosystem

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASING.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: code-implementer.md  quality-reviewer.md  spec-reviewer.md
commands/: backlog-development.md  brainstorm.md  branch.md  commit.md  implement.md  plan.md  pr.md  status.md  verify.md  workflow.md
docs/: publishing-to-marketplace.md  skill-pressure-scenarios.md  smoke-test-results.md  validation-report-phase-2.md
docs/backlogs/: 2025-12-31-status-command-backlog.md
docs/designs/: 2025-12-31-status-command-design.md
docs/plans/: 2025-12-27-phase3-cicd-design.md
hooks/: backlog-lint.sh  backlog-task-counter.sh  brainstorm-end.sh  brainstorm-exit-plan-mode.sh  brainstorm-mode-check.sh  brainstorm-phase-start.sh  brainstorm-start.sh  hooks.json  implementer-evidence-check.sh  main-branch-protection.sh  phase-transition.sh  session-start.sh  subagent-dispatch-tracker.sh  subagent-review-check.sh  tdd-precommit-check.sh  todo-injector.sh  todo-sweep.sh  validate-context-packet.sh  validate-task-description.sh  verify-before-commit.sh  verify-task-count.sh  workflow-phase-check.sh  workflow-skip-set.sh
scripts/: pre-push-version-check.sh  release.sh
templates/: decision-record.md  pr-description.md
tests/: __init__.py  conftest.py  test_agent_loading.py  test_command_loading.py  test_hooks_loading.py  test_plugin_structure.py  test_schemas.py  test_skill_loading.py  test_todo_injection.py
(+23 files in other folders)
